<resources>
    <string name="app_name">Food Market Kotlin</string>
    <string name="food_market">Food Market</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="type_your_email_address_here">Type your email address here</string>
    <string name="type_your_password_here">Type your password here</string>
    <string name="signin">Sign in</string>
    <string name="signup">Create new account</string>
    <string name="full_name">Full Name</string>
    <string name="type_your_full_name_here">Type your full name here</string>
    <string name="phone_number">Phone Number</string>
    <string name="type_your_phone_number_here">Type your phone number here</string>
    <string name="address">Address</string>
    <string name="type_your_address_here">Type your address here</string>
    <string name="house_number">House Number</string>
    <string name="type_your_city_here">Type your city here</string>
    <string name="continuetxt">Continue</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="type_your_house_number_here">type_house_number</string>
    <string name="yeay_completed">Yeay! completed</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="home">Home</string>
    <string name="title_home">title_home</string>
    <string name="title_dashboard">title_dashboard</string>
    <string name="title_notifications">title_notification</string>
    <string name="ouch_hungry">Ouch! Hungry</string>
    <string name="find_foods">Find Foods</string>
    <string name="imam_yusup_bachtiar">Imam Yusup Bachtiar</string>
    <string name="imamyusufb123_gmail_com">imamyusufb123@gmail.com</string>
</resources>