<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    android:background="#FFF"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="24dp"
    android:paddingRight="16dp"
    tools:context=".ui.auth.signin.SigninFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        style="@style/TextView.PoppinsRegular16sp020202"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_address" />

    <EditText
        style="@style/EditText.PoppinsRegular14sp8D9AD23Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/type_your_email_address_here"
        android:padding="10dp" />

    <TextView
        style="@style/TextView.PoppinsRegular16sp020202"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        style="@style/EditText.PoppinsRegular14sp8D9AD23Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/type_your_password_here"
        android:padding="10dp" />

    <Button
        android:id="@+id/btn_signin"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/signin" />

    <Button
        android:id="@+id/btn_signup"
        style="@style/Button.Secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/signup" />
</LinearLayout>