<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.signup.SignupAddressFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        android:background="#FFF"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="24dp"
        android:paddingRight="16dp">

        <TextView
            style="@style/TextView.PoppinsRegular16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/phone_number" />

        <EditText
            style="@style/EditText.PoppinsRegular14sp8D9AD23Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/type_your_phone_number_here"
            android:padding="10dp" />

        <TextView
            style="@style/TextView.PoppinsRegular16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address" />

        <EditText
            style="@style/EditText.PoppinsRegular14sp8D9AD23Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/type_your_address_here"
            android:padding="10dp" />

        <TextView
            style="@style/TextView.PoppinsRegular16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/house_number" />

        <EditText
            style="@style/EditText.PoppinsRegular14sp8D9AD23Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/type_your_house_number_here"
            android:padding="10dp" />

        <TextView
            style="@style/TextView.PoppinsRegular16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="City" />

        <EditText
            style="@style/EditText.PoppinsRegular14sp8D9AD23Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/type_your_city_here"
            android:padding="10dp" />

        <Button
            android:id="@+id/btn_continue"
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/sign_up_now" />


    </LinearLayout>
</androidx.core.widget.NestedScrollView>