<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.signup.SignupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        android:background="#FFF"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="24dp"
        android:paddingRight="16dp">


        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_picture_empty" />

        <TextView
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/full_name" />

        <EditText
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:layout_marginTop="6dp"
            android:hint="@string/type_your_full_name_here"
            android:padding="10dp" />

        <TextView
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:text="@string/email_address" />

        <EditText
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/type_your_email_address_here"
            android:padding="10dp" />

        <TextView
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            android:text="@string/password" />

        <EditText
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/type_your_password_here"
            android:padding="10dp" />

        <Button
            android:id="@+id/btn_continue"
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/continuetxt" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>